--- a/color_game.css
+++ b/color_game.css
@@ -1,5 +1,6 @@
 body {
   background-color: #232323;
+  margin: 0;
 }
 
 .square {
@@ -18,6 +19,8 @@ body {
 h1 {
   text-align: center;
   color: white;
+  background-color: steelblue;
+  margin: 0;
 }
 
 #stripe {
