--- a/color_game.css
+++ b/color_game.css
@@ -10,10 +10,14 @@ body {
   padding-bottom: 30%;
   float: left;
   margin: 1.66%;
+  border-radius: 50%;
+  transition: background 0.6s;
+  -webkit-transition: background 0.6s;
+  -moz-transition: background 0.6s;
 }
 
 #container {
-  margin: 0 auto;
+  margin: 20px auto;
   max-width: 600px;
 }
 
@@ -32,6 +36,11 @@ h1 {
   font-size: 200%;
 }
 
+#message {
+  display: inline-block;
+  width: 20%;
+}
+
 #stripe {
   background-color: white;
   height: 30px;
@@ -40,5 +49,25 @@ h1 {
 }
 
 .selected {
-  background-color: blue;
+  color: white;
+  background: steelblue;
+}
+
+button {
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  height: 100%;
+  font-weight: 700;
+  color: steelblue;
+  letter-spacing: 1px;
+  font-size: inherit;
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+}
+
+button:hover {
+  color: white;
+  background: steelblue;
 }
